@@ -1,6 +1,7 @@
 #!/usr/bin/perl -wl
 
 use Test::Simple tests => 13;
+use Test::Differences;
 use File::Path qw(mkpath rmtree);
 use File::Slurp;
 use File::Which;
@@ -38,8 +39,7 @@ unless (which('lsof')) {
 }
 
 my $stderr = read_file("$BASE/stderr");
-print "Want:\n\n$wanted\nGot:\n\n$stderr\n";
-ok( $stderr eq $wanted, "Check command STDERR output (should be empty)" );
+eq_or_diff_text( $stderr, $wanted, "Check command STDERR output (should be empty)" );
 
 # 9
 $wanted = "Create directory t/create-empty-directories/target/u-foobar-fnord and parents
@@ -50,8 +50,7 @@ Symlinking $HOME/.foobar/fnord -> $TARGET/u-foobar-fnord
 ";
 
 my $output = read_file("$BASE/output");
-print "Want:\n\n'$wanted'\nGot:\n\n'$output'\n";
-ok( $output eq $wanted, "Check command STDOUT" );
+eq_or_diff_text( $output, $wanted, "Check command STDOUT" );
 
 # 10 - 12
 ok( -d "$TARGET/$PREFIX-foobar-fnord", "Directory has been created" );
